  unpack them, if found
- functions for applying IPS, PPF and BPS patches now look in ${PWD} and
  ${PATCHIMAGE_RIIVOLUTION_DIR} for patch files
- functions for applying IPS, PPF and BPS patches thus only fail when they
  neither find a zip archive containing the patch, or the bare patch file
- HANS patcher now supports applying DELTA patches
- split out messages into message.sh

::bug fixes
- Pokemon Star Sapphire was accidently called Alpha Sapphire in the menu,
  also had wrong Short ID
- fixed that Opening Title for US version was applied to EU version in
  MLG Super Mario Bros. Wii (fixes black screen on start)
- fixed regression from version 7.1.0 that made it impossible to patch
  US version of New Super Mario Bros. Wii because it was looking for wrong
  ID SMNU01 instead of correct ID SMNE01
- fixed black screen in Devil Mario Winter Special by not applying the custom
  openingTitle.arc for PAL New Super Mario Bros. Wii
- fixed black screen in Remixed Super Mario Bros. Wii by not applying the custom
  openingTitle.arc for PAL and JAP New Super Mario Bros. Wii

::command line parameters
- add batch building short cuts for --game parameter:
  * NSMB_ALL	build all NSMB Mods
  * PKMN_ALL	build all Pokemon X, Y, Omega Ruby and Alpha Sapphire Mod
  * PKMN_X	build all Pokemon X Mods
  * PKMN_Y	build all Pokemon Y Mods
  * PKMN_OR	build all Pokemon Omega Ruby Mods
  * PKMN_AS	build all Pokemon Alpha Sapphire Mods
- add --list-requirements ; show a detailed list of expected game images and
  Riivolution or HANS archives or Patches required for building
- add --list-requirements-nsmb, --list-requirements-mkwiimmfi,
  --list-requirements-tokyo, --list-requirements-kirby,
  --list-requirements-pokemon, --list-requirements-3ds,
  --list-requirements-other, to show only requirements for mods of specific
  base games
- add --show-download ; only show download like for games choosen in menu or
  given using --game parameter