@@ -37,6 +37,7 @@ SMN?MI		Midi's Super Mario Bros Wii - Just A Little Adventure
 SMN?RV		RVLution Wii (NewSMB Mod)
 SMN?YL		Luigi's Super Yoshi Bros.
 SMN?ZA		Newer Apocalypse
+SMN?ZC		Challenging Super Mario Bros. Wii: Virtual Special
 SMN?ZY		Super Mario Skyland
 SMM?02		Super Mario: Mushroom Adventure PLUS - Winter Moon
 SMV?01		Super Mario Vacation
