@@ -337,9 +337,18 @@ download_riivolution_patch () {
 			exit 21
 		;;
 
-		*medafire* )
+		*mediafire* )
 			x=6
 			echo "can not download from Mediafire, download manually from:
+
+	${DOWNLOAD_LINK}
+"
+			exit 21
+		;;
+
+		*sendspace* )
+			x=6
+			echo "can not download from SendSpace, download manually from:
 
 	${DOWNLOAD_LINK}
 "
