@@ -34,6 +34,7 @@ NSMB25	GhostlySuperGhostBoos	Ghostly Super Ghost Boos. Wii
 NSMB26	RevisedSuperMarioBros	Revised Super Mario Bros. Wii
 NSMB27	MLGSuperLuigi		MLG Super Luigi Bros. Wii
 NSMB28	Cliff			Cliff Super Mario Bros. Wii
+NSMB29	Virtual			Challenging Super Mario Bros. Wii: Virtual Special
 
 NSMB99	NSMBWCharacters		Customize Characters
 
@@ -136,6 +137,7 @@ NSMB25	GhostlySuperGhostBoos	GSGBW v1.0.2.zip
 NSMB26	RevisedSuperMarioBros	RSMBW Version 1.0.zip
 NSMB27	MLGSuperLuigi		MLGLuigiWii.zip
 NSMB28	Cliff			Cliff_Super_Mario_Brothers_Wiiv1.0b.zip
+NSMB29	Virtual			ChaSMBW_VrS_v0.2.zip
 
 NSMB99	NSMBWCharacters		Alternative Character Files are supplied
 "
